# contextkit

./: .gitignore  README.md  curriculum.md  pyproject.toml  test_context_selection.py
artifacts/code/: blake3:76b381ae43a4eba015448aa63898fd132762958900fef451badd40098f329a73.py  blake3:7da690d0a114dfaeeffd9c695faaf7862c63dac71110b34b084e2d7e9b3462e8.py  blake3:ab2a6e1a8d3cdd7b63ce6c250542de9cb3588ed4781dab4acd0630e4ccee4008.py  blake3:ca471357dbba88b4a3d40516a9ab77dc8401db72159f924f569141fe8587a366.py  blake3:e075ff25c5ea737ed5fb040442de2ed23ea1d67284b48afff12b1da3d2010f0e.py
artifacts/sql/: blake3:8872a6ec878063def834cf4be30bfeb067615f1b73ddec8d33755cd56f751c4a.sql  blake3:9ce5b8a3aec319eedf5f1e01e9a9e14095a4cc27ec748ba40f02597cfb40d75d.sql
artifacts/text/: blake3:45f2a9b4a224928df6beaf185ad91954dc39886e2435e5c66c5578a645143083.txt  blake3:b916fad02abdcf182c5fa89560622ebda8df3293b0b8fe4f95965177618248c3.txt  (+1 more)
chats/: 2025-09-07--customer-ltv-dashboard-analysis.md  2025-09-07--returns-vs-ltv.md  2025-09-09--customer-ltv-analysis.md  2025-09-14--web-chat-session-session.md
contextkit/: cli.py  embeds.py  index.py  paths.py  summarize.py  utils.py  web.py
contextkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
contextkit/commands/: __init__.py  chat_commands.py
packs/: customer-ltv-analysis--blake3:68f46.md  customer-ltv-dashboard-analysis--blake3:6ad13.md  returns-vs-ltv--blake3:0bd2f.md  web-chat-session-session--blake3:de6cf.md
samples/: enhanced_chat.md  example_chat.md
test_data/: customers.csv  ecommerce_analysis.md  orders.csv
(+20 files in other folders)
